--- a/angular_task/css/taskman.css
+++ b/angular_task/css/taskman.css
@@ -1,10 +1,6 @@
 body{
 	font-family: 'Open Sans', sans-serif;
 }
-a {
-color: #E1704B;
-transition: color 0.5s ease;
-}
 a:hover{
     cursor:pointer;
 }
@@ -13,28 +9,54 @@ h1{
     font-size: 2.5em;
     font-weight: 500;
 }
-div.task label.checkbox{
-	border: 1px solid #DDD;
-	border-left-width: 3px;
+.form-control{
+	border-radius: 0px
+}
+div.task label {
+	width: 100%;
 	padding: 9px 9px 9px 29px;
-	background-color: #FFF;
 	margin-top: 10px;
 	position: relative;
 	font-weight: normal;
 }
-.header-color-blue {
+div.task label.task-not-done{
+	border: 1px solid #DDD;
+	border-left-width: 4px;
+	background-color: #FFF;
+}
+div.task label.task-done{
+	border: 1px solid #DDD;
+	border-left-width: 4px;
+	background-color: #EEE;
+}
+.btn-flat {
+	border-radius: 0px;	
+}
+.blue {
     background: #307ECC;
+    color: #fff;
+}
+.white {
+	background: #fff;
+    color: #000;
+}
+.grey-text{
+	color: #DDD;
+}
+.green-text{
+	color: green;
+}
+.header {
     border: 1px solid #307ECC;
     box-sizing: content-box;
     position: relative;
     min-height: 38px;
     padding: 0 12px 0;
-    color: #fff;
 }
 .filter{
     margin-top: 6px;
 }
-.header-color-blue+.widget-body {
+.header+.widget-body {
 border-color: #307ECC;
 margin-top: -10px;
 padding: 20px 10px;
@@ -49,6 +71,9 @@ background-color: #FFF;
 }
 .header-elements-margin {
 	margin: 5px;
+}
+.bottom-elements-margin {
+	margin: -5px;
 }
 .add-task{
 	margin-top: 10px;
